<resources>
    <string name="app_name">kakaotest</string>


    <!-- search fragment -->
    <string name="serch_book_hint">책 이름을 입력하세요.</string>


    <!-- detail fragment-->
    <string name="search_book_title">책 이름</string>
    <string name="search_book_date">출시일</string>
    <string name="search_book_price">책가격</string>
    <string name="search_book_publisher">출판사</string>
    <string name="search_button">검색</string>
    <string name="book_content">책내용</string>
    <string name="back">뒤로</string>
    <string name="no_more_data">더이상 불러올 데이터가 없습니다.</string>


</resources>