<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.wiiv.baseapp.ui.main.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 상단바 -->
        <LinearLayout
            android:id="@+id/LL_topbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_height"
            android:background="@color/gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/view_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                style="@style/Bold12"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/top_button_size"
                android:background="@drawable/bg_rect_fill"
                android:enabled="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:onClick="@{() -> vm.onClickBack()}"
                android:text="@string/back" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/IV_favorite"
                android:layout_width="@dimen/favorite_size"
                android:layout_height="@dimen/favorite_size"
                android:gravity="center"
                android:clickable="false"
                android:foreground="?android:selectableItemBackground"
                activated="@{vm.liveSeletedBook.isFavorite}"
                android:onClick="@{()-> vm.onClickFavorite(vm.liveSeletedBook.isFavorite)}"
                android:src="@drawable/favorite_star" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LL_topbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/view_margin">

                <!-- 책 이미지 -->
                <ImageView
                    android:id="@+id/IV_bookimage"
                    android:layout_width="@dimen/detail_iamge_size"
                    android:layout_height="@dimen/detail_iamge_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadUrl="@{vm.liveSeletedBook.thumbnail}" />


                <!-- 책이름 -->
                <TextView
                    android:id="@+id/TV_booktitle"
                    style="@style/Bold12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{vm.liveSeletedBook.title}"
                    tools:text="@string/search_book_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/IV_bookimage" />

                <!-- 출시일 -->
                <TextView
                    android:id="@+id/TV_bookdate"
                    style="@style/Medium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@{vm.liveSeletedBook.getdateStr()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/TV_booktitle"
                    tools:text="@string/search_book_date" />


                <!-- 책가격 -->
                <TextView
                    android:id="@+id/TV_bookprice"
                    style="@style/Medium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.liveSeletedBook.priceStr}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TV_booktitle"
                    tools:text="@string/search_book_price" />

                <!-- 출판사 -->
                <TextView
                    android:id="@+id/TV_bookpublisher"
                    style="@style/Medium12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.liveSeletedBook.publisher}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TV_bookprice"
                    tools:text="@string/search_book_publisher" />

                <!-- 책 내용 -->
                <TextView
                    android:id="@+id/TV_bookcontent"
                    style="@style/Medium12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.liveSeletedBook.contents}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/TV_bookpublisher"
                    tools:text="@string/book_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
